--- a/index.html
+++ b/index.html
@@ -18,10 +18,23 @@
             max-width: 800px;
             margin: auto;
             background: rgba(0, 0, 0, 0.5);
-            padding: 20px;
+            padding: 2px;
             box-shadow: 0px 0px 1rem rgba(255, 255, 255, 0.6);
             border-radius: 8px;
 	}
+	  h1 {
+            color: #666;
+            text-align: center;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+            animation: glowing 2s infinite;
+        }
+       h2 {
+            color: #fff;
+            font-size: 80%;
+            text-align: center;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+         margin-bottom: 20px;
+       }
         .card {
             display: flex;
             flex-direction: column;
@@ -212,7 +225,10 @@
 
 
     <main class="flex-grow p-4">
-     
+     <div class="container">
+    <h1>NOT FOR SALE</h1>
+  <h2>We only re-share free Iptv links (such as public IPTV channels, live stream url, m3u8, ts, flv, rtsp, rtmp, txt ect.) which are already at public accessible websites. We DO NOT host or stream any videos on this website, We urge all copyright owners, to recognize that links contained within this site are located somewhere else on the web. Please direct all copyright infringement issues to the companies that host these files.</h2>
+	     
         <div class="philpogi1">
             <select id="channelSelect" class="w-full p-2 bg-gray-700 text-white rounded">
                 <option value="">TAP HERE TO SELECT CHANNEL</option>
