--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
             text-align: center;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
             animation: glowing 2s infinite;
+            font-size: 40px;
         }
        h2 {
             color: #fff;
             font-size: 80%;
             text-align: center;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
-         margin-bottom: 20px;
-       }
+            margin-bottom: 20px;
+        }
         .card {
             display: flex;
             flex-direction: column;
