--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             text-align: center;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
             margin-bottom: 20px;
+	    padding: 3px;
         }
         .card {
             display: flex;
