--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
 
         body {
-            font-family: 'Inter', sans-serif;
-            background: linear-gradient(135deg, #ffffff 100%, #ffffff 0%);
-            background-attachment: fixed;
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 20px;
+            background: url('https://raw.githubusercontent.com/cee-tv/Chinatv/main/Chill%20Night%20Stars%201-2.gif') no-repeat center center fixed;
+            background-size: cover;
         }
         .container {
             max-width: 800px;
