--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <title>BASTIKWANG</title>
   <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
-
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
         body {
             font-family: 'Poppins', sans-serif;
             margin: 0;
