--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest'></script><body>
  <title>BASTIKWANG</title>
   <style>
-        
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');    
+
         body {
             font-family: 'Poppins', sans-serif;
             margin: 0;
