--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest'></script><body>
  <title>BASTIKWANG</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');    
-
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
         body {
             font-family: 'Poppins', sans-serif;
             margin: 0;
@@ -29,7 +28,7 @@
             text-align: center;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
             animation: glowing 2s infinite;
-            font-size: 40px;
+            font-size: 30px;
         }
        h2 {
             color: #fff;
