--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
             color: #fff;
         }
 		.philpogi1 {
-            background-color: #000000;
+            background-color: #fff;
             backdrop-filter: blur(10px);
             padding: 4px;
             margin: 10px;
-            border: 2px;
+            border: 2px solid #007BFF;
             border-radius: 10px;
             text-align: center;
             color: #fff;
