--- a/index.html
+++ b/index.html
@@ -144,6 +144,11 @@
             border-radius: 10px;
             text-align: center;
             color: #fff;
+	video {
+            width: 100%;
+            height: auto;
+            border-radius: 6px;
+        }		
         }
         .jumbotron h1 {
             font-size: 2em;
