--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>document.addEventListener('contextmenu', function(event) {event.preventDefault();});</script>
     <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest'></script><body>
- <title>BASTIKWANG</title>
+ <title>CEE TV</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
         body {
@@ -227,7 +227,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BASTIKWANG TV</title>
+    <title>CEE TV TV</title>
     <script async src="f0a6f.txt" crossorigin="anonymous"></script>
     <script src="https://cdn.tailwindcss.com/"></script>
     <script src="jwpsrv.jsS"></script>
@@ -244,7 +244,7 @@
 
     <main class="flex-grow p-4">
      <div class="container">
-    <h1>NOT FOR SALE</h1>
+    <h1>Enjoy Your Watching</h1>
   <h2>We only re-share free Iptv links (such as public IPTV channels, live stream url, m3u8, ts, flv, rtsp, rtmp, txt ect.) which are already at public accessible websites. We DO NOT host or stream any videos on this website, We urge all copyright owners, to recognize that links contained within this site are located somewhere else on the web. Please direct all copyright infringement issues to the companies that host these files.</h2>
 	     
         <div class="philpogi1">
